Added @Value, Environment and @ConfigurationProperties for structured properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-# See http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
-spring.thymeleaf.cache=false
-spring.main.show-banner=false
-logging.level.jdbc=OFF
-logging.level.jdbc.sqltiming=DEBUG
-logging.level.jdbc.resultsettable=DEBUG
+properties.file = default
+name = Ferdinand
+
+#Fake DB Properties
+db.url=localhost
+db.username=admin
+db.password=secure
+db.connection-pool=5
