Finished blog post. Added cross referencing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ properties.file = default
 name = Ferdinand
 
 #Fake DB Properties
-db.url=localhost
-db.username=admin
-db.password=secure
-db.connection-pool=5
+db.url = localhost
+db.username = admin
+db.password = secure
+db.connection-pool = 5
+
+#Reference another property. Does not have to be in same file.
+message = My environment is ${environment}
